fix to top z-index issue

--- a/src/scss/parts/menu.scss
+++ b/src/scss/parts/menu.scss
@@ -218,7 +218,7 @@
 
 .menu__bottom {
     position: fixed;
-    z-index: 10;
+    z-index: 11;
     bottom: 30px;
     left: 50%;
     transform: translate(-50%, 0);
