--- a/src/scss/parts/to-top.scss
+++ b/src/scss/parts/to-top.scss
@@ -10,7 +10,7 @@
     justify-content: center;
     background-color: #fff;
     border-radius: 50%;
-    z-index: 20;
+    z-index: 10;
 
     opacity: 0;
     pointer-events: none;
